# Docker-NLP

./: Dockerfile  README.md  pyproject.toml  requirements.txt
.github/workflows/: docker-publish.yml
